<resources>
    <string name="app_name">Guanajoven</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Inicia Sesión</string>
    <string name="mensaje_bienvenida">En Guanajoven somos la instancia de Gobierno del Estado rectora en el tema de juventud, generadora de programas y políticas públicas, orientada a elevar la calidad de vida de los jóvenes guanajuatenses.</string>
    <string name="home">Home</string>
    <string name="bienvenida">HAZ DE GUANAJUATO TU PROYECTO DE VIDA</string>
    <string name="comenzar">Comenzar</string>
    <string name="registrar">Registrar</string>
    <string name="copyright">Copyright © \nGuanajuato 2017.</string>
    <string name="inicio">Inicio</string>
    <string name="pass">Contraseña</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="password_hint">Contraseña</string>
    <string name="nuevousuario_diagnostico">Registra tu Usuario</string>
    <string name="hidratacion_diaria">Hidratación diaria</string>
    <string name="ejercicio_diario">Ejercicio Diario</string>
    <string name="agua">Agua</string>
    <string name="recuperarpass"><u>Recuperar contraseña</u></string>
    <string name="recuperarpass2">Recuperar contraseña</string>
    <string name="mi_perfil">Modificar perfil</string>
    <string name="registrar_agua">Registrar agua</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="redes_sociales">Redes sociales</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_email">Email</string>
    <string name="hint_passwordconfirmar">Confirmar Contraseña</string>
    <string name="facebook_app_id">1547755481949405</string>
    <string name="fb_login_protocol_scheme">fb1547755481949405</string>
    <string name="api_key">AIzaSyBqcgu3wsKmTDKHQjpMhhj-gie-eLR_ELI</string>
    <string name="datos_usuario">Datos de usuario</string>
    <string name="title_activity_segunda">SegundaActivity</string>
    <string name="meta_hidratacion_diaria">Meta de hidratación diaria</string>
    <string name="registro_agua">Registro de agua</string>
    <string name="registro_ejercicio">Registro de ejercicio</string>
    <string name="actividades">Actividades</string>
    <string name="calendario">Calendario de eventos</string>
    <string name="alarmas">Alarmas de activación</string>
    <string name="ver_reportes">Ver reportes</string>
    <string name="general">General</string>
    <string name="directorio_code">Instalaciones deportivas</string>
    <string name="inicio_sesion">Inicio de sesión</string>
    <string name="registro">Registro</string>
    <string name="reportes">Reportes</string>
    <string name="login_google">Google</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="recuperacion_codigo">Introduce el código de recuperación que ha sido enviado a tu correo.</string>
    <string name="nuevo_password">Nueva contraseña</string>
    <string name="confirmar_password">Confirmar contraseña</string>
    <string name="reestablecer_pass">Reestablecer contraseña</string>
    <string name="reenviar_codigo">Volver a enviar código</string>
    <string name="enviar_codigo">Enviar código</string>
    <string name="olvidaste">¿Olvidaste tu contraseña?</string>
    <string name="colaborador1">Ing. Felipe Uriel Infante Martínez</string>
    <string name="lider">Líder de desarrollo en Android</string>
    <string name="correo1">ur13l.infante@gmail.com</string>
    <string name="colaborador2">José María Cruz Parada</string>
    <string name="desarrollador">Desarrollador en Android</string>
    <string name="correo2">chema-cruz@live.com</string>
    <string name="presion">¿Te conoces con presión elevada?</string>
    <string name="glucosa">¿Te conoces con glucosa elevada?</string>
    <string name="actividad">¿Realizas alguna actividad física?</string>
    <string name="peso_actual">Introduce tu peso actual</string>
    <string name="estatura_actual">Introduce tu estatura actual</string>
    <string name="estado_animo">Estado de ánimo</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="introduce">Responde a las siguientes preguntas</string>
    <string name="datos_complementarios">Datos complementarios</string>
    <string name="retos">Retos</string>
    <string name="eventos">Eventos</string>
    <string name="politica"><u>Política de privacidad</u></string>
    <string name="eliminar">Eliminar</string>
    <string name="selecciona_accion">Selecciona la acción.</string>
    <string name="no_alarmas">No hay alarmas registradas</string>
    <string name="mar">M</string>
    <string name="lun">L</string>
    <string name="dom">D</string>
    <string name="sab">S</string>
    <string name="vie">V</string>
    <string name="jue">J</string>
    <string name="mie">M</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_video_activacion">Video de activación</string>
    <string name="empty">No hay eventos registrados.</string>
    <string name="emptyDir">No se encontró ningún resultado.</string>
    <string name="mensaje_aviso_de_privacidad">


&lt;b>¿Para qué fines utilizaremos sus datos personales?&lt;/b>&lt;br>

Los datos personales que recabamos de usted, los utilizaremos para las siguientes finalidades

que son necesarias para el servicio que solicita: &lt;br>

● Para verificar y confirmar su identidad y situación patrimonial&lt;br>

● Para administrar y operar los servicios que contrata con la Comisión&lt;br>

● Mercadotecnia o publicitaria&lt;br>

● Prospección comercial&lt;br>&lt;br>

&lt;b>¿Qué datos personales utilizaremos para estos fines?&lt;/b>&lt;br>

Para llevar a cabo las finalidades descritas en el presente aviso de privacidad, utilizaremos los

siguientes datos personales:&lt;br>

● Datos de identificación&lt;br>

● Datos de contacto&lt;br>

● Datos sobre características físicas&lt;br>

● Datos laborales&lt;br>

● Datos académicos&lt;br>

● Datos migratorios&lt;br>

● Datos patrimoniales y/o financieros&lt;br>&lt;br>

&lt;b>¿Cómo puede acceder, rectificar o cancelar sus datos

personales, u oponerse a su uso?&lt;/b>&lt;br>

Usted tiene derecho a conocer qué datos personales tenemos de usted, para qué los utilizamos

y las condiciones del uso que les damos (Acceso). Asimismo, es su derecho solicitar la

corrección de su información personal en caso de que esté desactualizada, sea inexacta o

incompleta (Rectificación); que la eliminemos de nuestros registros o bases de datos cuando

considere que la misma no está siendo utilizada adecuadamente (Cancelación); así como

oponerse al uso de sus datos personales para fines específicos (Oposición). Estos derechos se

conocen como derechos ARCO.&lt;br>

Para el ejercicio de cualquiera de los derechos ARCO, usted deberá presentar la solicitud

respectiva a través del siguiente medio:&lt;br>

● mediante escrito ante la oficina de la Unidad de Acceso, ubicada en Paseo de la Presa

número 170, Zona Centro, Guanajuato, Guanajuato, C.P. 36000.&lt;br>

Para conocer el procedimiento y requisitos para el ejercicio de los derechos ARCO, ponemos a

su disposición el siguiente medio:&lt;br>

● mediante escrito&lt;br>

Los datos de contacto de la persona o departamento de datos personales, que está a cargo de

dar trámite a las solicitudes de derechos ARCO, son los siguientes:&lt;br>

a. Nombre de la persona o departamento de datos personales: Unidad de Acceso a la

Información&lt;br>

b. Domicilio: calle San Sebastián 78, colonia Zona Centro, ciudad Guanajuato., municipio o

delegación Guanajuato, c.p. 36000., en la entidad de Guanajuato, país México&lt;br>

c. Correo electrónico: unidadacceso@guanajuato.gob.mx&lt;br>

Usted puede revocar su consentimiento para el uso

de sus datos personales&lt;br>

Usted puede revocar el consentimiento que, en su caso, nos haya otorgado para el tratamiento

de sus datos personales. Sin embargo, es importante que tenga en cuenta que no en todos los

casos podremos atender su solicitud o concluir el uso de forma inmediata, ya que es posible

que por alguna obligación legal requiramos seguir tratando sus datos personales. Asimismo,

usted deberá considerar que para ciertos fines, la revocación de su consentimiento implicará

que no le podamos seguir prestando el servicio que nos solicitó, o la conclusión de su relación

con nosotros.&lt;br>

Para revocar su consentimiento deberá presentar su solicitud a través del siguiente medio:&lt;br>

● Por escrito&lt;br>

Para conocer el procedimiento y requisitos para la revocación del consentimiento, ponemos a

su disposición el siguiente medio:&lt;br>

● Por escrito dirigido al titular de la Comisión.&lt;br>&lt;br>


&lt;b>¿Cómo puede limitar el uso o divulgación de su

información personal?&lt;/b>&lt;br>

Con objeto de que usted pueda limitar el uso y divulgación de su información personal, le

ofrecemos los siguientes medios:&lt;br>

● Por escrito&lt;br>&lt;br>

&lt;b>¿Cómo puede conocer los cambios en este aviso de

privacidad?&lt;/b>&lt;br>

El presente aviso de privacidad puede sufrir modificaciones, cambios o actualizaciones

derivadas de nuevos requerimientos legales; de nuestras propias necesidades por los

productos o servicios que ofrecemos; de nuestras prácticas de privacidad; de cambios en

nuestro modelo de negocio, o por otras causas.&lt;br>

Nos comprometemos a mantenerlo informado sobre los cambios que pueda sufrir el presente

aviso de privacidad, a través de:&lt;br>

● Por medio escrito.&lt;br>

El procedimiento a través del cual se llevarán a cabo las notificaciones sobre cambios o

actualizaciones al presente aviso de privacidad es el siguiente:&lt;br>

● Solicitud por escrito.&lt;br>

Su consentimiento para el tratamiento de sus datos

personales&lt;br>

Consiento que mis datos personales sean tratados de conformidad con los términos y

condiciones informados en el presente aviso de privacidad.&lt;br>


    </string>
    <string name="detener">Detener</string>
    <string name="ejercicio30">Ejercicio</string>
    <string name="agua2">Agua</string>
    <string name="colaborador3">Ing. Juan José Camacho Luna</string>
    <string name="lider_proy">Líder de proyecto</string>
    <string name="correo3">jose.camacho@inquality.com.mx</string>
    <string name="colaborador4">Ing. Mario Alberto Negrete Rodríguez</string>
    <string name="lider_ios">Líder de desarrollo en iOS</string>
    <string name="correo4">mario_rguezz@yahoo.com.mx</string>
    <string name="colaborador5">Oscar Barrera Casillas</string>
    <string name="desarrollador_ios">Desarrollador en iOS</string>
    <string name="correo5">obc993@gmail.com</string>
    <string name="colaboradores_code">Colaboradores CODE</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="itl">Instituto Tecnológico de León</string>
    <string name="code">CODE</string>
    <string name="peso">Peso</string>
    <string name="historial_notificaciones">Historial de notificaciones</string>
    <string name="registrar_ejercicio">W</string>
    <string name="idioma_adicional_ingles">Inglés</string>
    <string name="idioma_adicional_frances">Francés</string>
    <string name="idioma_adicional_italiano">Italiano</string>
    <string name="idioma_adicional_aleman">Alemán</string>
    <string name="idioma_adicional_chino">Chino</string>
    <string name="btn_seleccionar_idiomas_aceptar">Aceptar</string>
    <string name="btn_seleccionar_idiomas_cancelar">Cancelar</string>
    <string name="idioma_adicional_arabe">Árabe</string>
    <string name="idioma_adicional_coreano">Coreano</string>
    <string name="idioma_adicional_japones">Japonés</string>
    <string name="idioma_adicional_polaco">Polaco</string>
    <string name="idioma_adicional_portugues">Portugués</string>
    <string name="idioma_adicional_ruso">Ruso</string>
    <string name="idioma_adicional_otro">Otro</string>
</resources>