<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/inicio"
        android:titleCondensed="true">
        <menu>
            <group android:checkableBehavior="single">
            <item android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home"/>
            <item
                android:id="@+id/nav_datos_tutor"
                android:icon="@drawable/ic_perfil"
                android:title="@string/mi_perfil" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_sesion"
                android:title="@string/cerrar_sesion"/>

            </group>
        </menu>
    </item>
    <item android:title="@string/actividades">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_calendario"
                    android:icon="@drawable/ic_calendar"
                    android:title="@string/calendario"/>

                <item
                    android:id="@+id/nav_registrar_ejercicio"
                    android:icon="@drawable/ic_exercise"
                    android:title="@string/registrar_ejercicio" />

                <item
                    android:id="@+id/nav_registrar_agua"
                    android:icon="@drawable/ic_water"
                    android:title="@string/registrar_agua" />

                <item
                    android:id="@+id/nav_alarmas"
                    android:icon="@drawable/ic_alarma"
                    android:title="@string/alarmas" />

                <item
                    android:id="@+id/nav_ver_reportes"
                    android:icon="@drawable/ic_reporte"
                    android:title="@string/ver_reportes" />

                <item
                    android:id="@+id/nav_historial_notificaciones"
                    android:icon="@drawable/ic_notificaciones"
                    android:title="@string/historial_notificaciones" />


            </group>
        </menu>
    </item>
    <item android:title="@string/general">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_directorio"
                    android:icon="@drawable/ic_directorio"
                    android:title="@string/directorio_code"/>
                <item
                    android:id="@+id/nav_colaboradores"
                    android:icon="@drawable/ic_colaboradores"
                    android:title="@string/colaboradores" />


            </group>
        </menu>
    </item>

</menu>
