<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/recuperacion_codigo"/>
    <EditText
        android:layout_width="200dp"
        android:maxLength="5"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:singleLine="true"
        android:lines="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/et_codigo"
        android:hint="XXXXX"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorAccent"
        android:id="@+id/ll_enviar"
        android:longClickable="true">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enviar_codigo"
            android:background="@drawable/green_button"
            android:textColor="@color/white"
            android:id="@+id/btn_enviar_codigo" />
    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:id="@+id/tv_reenviar_codigo"
        android:text="@string/reenviar_codigo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:visibility="gone"
            android:typeface="normal"
            android:textSize="18dp"
            android:maxLength="15"
            android:hint="@string/nuevo_password"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:typeface="normal"
            android:visibility="gone"
            android:textSize="18dp"
            android:maxLength="15"
            android:hint="@string/confirmar_password"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent">
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reestablecer_pass"
            android:background="@drawable/green_button"
            android:textColor="@color/white"
            android:visibility="gone"
            android:id="@+id/btn_reestablecer_pass" />
    </LinearLayout>


</LinearLayout>