<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            style="@style/AppTheme.EncabezadoTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/bienvenida"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="155dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/mensaje_bienvenida"
            android:textColor="@color/abc_secondary_text_material_light"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_comenzar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bordered_button_blue"
            android:text="@string/comenzar"
            android:textSize="15sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal|bottom"
            android:text="@string/copyright"
            android:textSize="15sp"
            android:textColor="@color/abc_secondary_text_material_light" />
    </LinearLayout>

</ScrollView>
